ircv3_parse_derive/tests/ui/de/fail/unnamed_missing_value.stderr
error: required `tag` value
 --> tests/ui/de/fail/unnamed_missing_value.rs:4:30
  |
4 | struct MissingTagValue(#[irc(tag)] String);
  |                              ^^^

error: required `tag_flag` value
 --> tests/ui/de/fail/unnamed_missing_value.rs:7:34
  |
7 | struct MissingTagFlagValue(#[irc(tag_flag)] String);
  |                                  ^^^^^^^^
